--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "math": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
